--- a/src/components/layout/header/Header.module.css
+++ b/src/components/layout/header/Header.module.css
@@ -1,9 +1,25 @@
+
+
 .headerLifespan {
-    font-size: 2.5rem;
-    font-weight: bold;
+  font-size: 2.5rem;
+  font-weight: bold;
+ 
 }
 
-/* Header.module.css */
+.headerLifespan:hover {
+  cursor: pointer;
+
+}
+
+.headerIcon {
+  transition: color 0.3s ease; /* Afegim una transició suau per a la propietat color */
+}
+
+.headerIcon:hover {
+  cursor: pointer;
+  color: rgb(35, 37, 41); /* Canviem lleugerament el color quan es passa el cursor per sobre */
+}
+
 
 .dropdownButton {
   color: var(--dark-color) !important;
@@ -15,3 +31,4 @@
 .dropdownButton::after {
   display: none !important;
 }
+
