--- a/src/index.css
+++ b/src/index.css
@@ -88,12 +88,30 @@ button[type="submit"]:active {
 button[type="submit"]:hover{
   background-color: var(--secondary-color)!important;
   border: 2px solid var(--secondary-color)!important;
-  
 }
 
-.card {
-  background-color: var(--primary-color)!important;
+.input-group {
+  border: 2px solid var(--secondary-color)!important;
+  border-radius: 8px;
+}
 
+.input-group:hover {
+  box-shadow: 0 0 5px var(--secondary-color) !important; /* Aquesta línia canvia el color de l'ombra al voltant del checkbox quan està seleccionat */
+}
+
+
+.leftCardHover {
+  background-color: #e9e9e9;
+  border-radius: 6px 0px 0px 6px;
+}
+
+.rightCardHover {
+  background-color: #e9e9e9;
+  border-radius: 0px 6px 6px 0px;
+}
+
+.carousel-indicators button {
+  background-color: var(--secondary-color) !important;
 }
 /* FORM */
 
@@ -128,3 +146,10 @@ input[type="date"]:focus,
   fill: var(--secondary-color);
 }
 
+.progress {
+  background-color: var(--primary-color) !important;
+}
+
+.progress-bar {
+  background-color: var(--secondary-color) !important;
+}
