--- a/src/index.css
+++ b/src/index.css
@@ -153,3 +153,16 @@ input[type="date"]:focus,
 .progress-bar {
   background-color: var(--secondary-color) !important;
 }
+
+.dataSection {
+  overflow-x: scroll; /* Habilita l'overflow en l'eix x */
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;
+  -webkit-scrollbar: none;
+
+}
+
+.bg-data{
+    background-color: var(--primary-color); /* Aplica el mateix color de fons que el contenidor principal */
+
+}
