--- a/src/components/feature/ProgressBar.module.css
+++ b/src/components/feature/ProgressBar.module.css
@@ -1,15 +1,15 @@
 .progressBar {
-  background-color: var(--primary-color);
+  background-color: var(--opacity-color);
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .progress {
   height: 13vmin;
-  background-color: var(--secondary-color);
+  background-color: var(--primary-color);
   transition: width 4s ease-in-out;
 }
 
 .progress:hover {
-  box-shadow: 0 0 10px var(--secondary-color) !important;
+  box-shadow: 0 0 10px var(--primary-color) !important;
  }
 
