--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
   /* Colors */
   --opacity-color: #a3a5ef; /* Main opacity color */
   --primary-color: #7579e7; /* Secondary color */
+  --chart-color: #7579e77c; /* Secondary color */
   --secondary-color: #f9b200; /* Secondary color */
 
 
