--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,8 @@
   /* Colors */
   --opacity-color: #a3a5ef; /* Main opacity color */
   --primary-color: #7579e7; /* Secondary color */
-  --chart-color: #7579e77c; /* Secondary color */
-  --secondary-color: #f9b200; /* Secondary color */
+  --chart-color: #7579e760; /* Secondary color */
+  --secondary-color: #ff0069; /* Secondary color */
 
 
 
@@ -165,6 +165,30 @@ input[type="date"]:focus,
 
 }
 
-.bg-data{
-    background-color: #7579e73e; /* Aplica el mateix color de fons que el contenidor principal */
+
+.card {
+  border-color: red;
+}
+
+/* Estils CSS per als cards que contenen els gràfics */
+
+.card-body-chart {
+    height: 275px;
+    width: 400px; /* Fer que el cos del card ocupi tot l'espai disponible */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+/* Estils CSS per als gràfics dins dels cards */
+.chart-container {
+    flex: 1; /* Fer que els gràfics ocupin tot l'espai disponible dins del card */
+}
+
+.events-header {
+  border-top: 7px solid var(--secondary-color);
+}
+
+.profile-header {
+  border-top: 7px solid var(--primary-color);
 }
