--- a/src/components/layout/footer/Footer.module.css
+++ b/src/components/layout/footer/Footer.module.css
@@ -30,8 +30,8 @@
     color: var(--secondary-color);
 }
 
-span  {
-    color: var(--light-color);
+footer span  {
+    color: var(--light-color) !important;
 }
 
 p {
