--- a/src/components/feature/ProgressBar.module.css
+++ b/src/components/feature/ProgressBar.module.css
@@ -1,43 +1,38 @@
+.progressContainer {
+  position: sticky;
+  top: 50px; /* Adjust this as needed */
+  z-index: 1 !important; /* Adjust this as necessary */
+  background-color: white; /* Ensure it doesn't blend with the content */
+}
+
 .progressBar {
   background-color: var(--opacity-color);
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  position: relative;
+  height: 10vmin;
 }
 
 .progress {
-  height: 10vmin;
+  height: 100%;
   background-color: var(--primary-color);
   transition: width 4s ease-in-out;
+  position: relative;
 }
 
 .progress:hover {
   box-shadow: 0 0 10px var(--primary-color) !important;
 }
 
-.headerLifespan {
+.lifespan {
   font-size: 2.5rem;
   font-weight: bold;
 }
 
-.headerLifespan:hover {
+.lifespan:hover {
   cursor: pointer;
 }
 
-.headerIcon {
-  transition: color 0.3s ease; /* Afegim una transició suau per a la propietat color */
-}
+header {
+  z-index: 1 !important; /* Ensure it is above the progress bar */
 
-.headerIcon:hover {
-  cursor: pointer;
-  color: rgb(35, 37, 41); /* Canviem lleugerament el color quan es passa el cursor per sobre */
-}
-
-.dropdownButton {
-  color: var(--dark-color) !important;
-  background: none !important;
-  box-shadow: none !important;
-  border: none !important;
-}
-
-.dropdownButton::after {
-  display: none !important;
 }
