--- a/src/components/layout/main/MainRouting.module.css
+++ b/src/components/layout/main/MainRouting.module.css
@@ -1,4 +1,6 @@
 .routesContainer {
     background-color: var(--light-color);
-    min-height: 90vmin;
+    min-height: 100vmin;
+    margin-top: -20px !important;
+    margin-left: -20px !important;
 }
