--- a/src/index.css
+++ b/src/index.css
@@ -412,3 +412,15 @@ button:hover {
     position: relative;
     margin-bottom: -120px;
 }
+
+.visible {
+  visibility: visible;
+  opacity: 1;
+  transition: opacity 0.5s linear;
+}
+
+.invisible {
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s 0.5s, opacity 0.5s linear;
+}
