--- a/src/components/layout/nav/Nav.module.css
+++ b/src/components/layout/nav/Nav.module.css
@@ -1,4 +1,3 @@
-/* styles.css */
 nav {
   box-shadow: 0 0 10px #00000033 !important;
 }
@@ -18,6 +17,14 @@ span {
 
 .navLink {
   color: var(--dark-color) !important; /* Color dark */
+  text-shadow: none; /* No text shadow inicialment */
+}
+
+.navLink:hover {
+  color: var(--dark-color) !important; /* Color dark */
+  font-weight: normal; /* Manté el font-weight normal */
+  text-shadow: 0px 0 black; /* Simula el bold amb text-shadow */
+  transition: text-shadow 0.2s ease-in-out; /* Transició per al canvi de text-shadow */
 }
 
 .dropdownToggle::after {
@@ -28,7 +35,6 @@ span {
   max-width: 100vw; /* Ensure it stays within the viewport width */
   overflow-x: auto; /* Allow horizontal scrolling if necessary */
   will-change: transform;
-  transform: translate3d(0, 0, 0);
   z-index: 3 !important; /* Ensure it is above the progress bar */
 }
 
