--- a/src/components/layout/sidebar/Sidebar.module.css
+++ b/src/components/layout/sidebar/Sidebar.module.css
@@ -1,20 +1,30 @@
-/* Styles for the navigation container */
-.navContainer {
-    background-color: var(--light-color);
-    height: 87vmin;
-    overflow-y: auto;
+.sidebarContainer {
+  box-shadow: 3px 0 5px -2px rgba(0, 0, 0, 0.3); /* Ombra a la dreta */
+  height: 100vh; /* Assegura que ocupa tota l'altura */
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
 }
 
-  /* Styles for anchor tags within the navigation */
+.navContainer {
+  background-color: rgb(255, 255, 255);
+  height: 87vmin;
+  overflow-y: auto;
+  /* altres estils */  box-shadow: 3px 0 5px -2px rgba(0, 0, 0, 0.3); /* Ombra a la dreta */
+
+}
+
+/* Styles for anchor tags within the navigation */
 .navLinks a {
-    color: var(--dark-color);
-    display: block;
-    width: fit-content;
-    text-decoration: none;
-    transition: background-color 0.4s ease, color 0.4s ease; /* Smooth transition */
-    border-radius: 5px; /* Adds some rounding to simulate buttons */
-    margin: 2px 0 2px 30px; /* Spacing around the anchor tags */
-    padding: 3px 8px; /* Reduce padding for the clickable area */
+  color: var(--dark-color);
+  display: block;
+  width: fit-content;
+  text-decoration: none;
+  transition: background-color 0.4s ease, color 0.4s ease; /* Smooth transition */
+  border-radius: 5px; /* Adds some rounding to simulate buttons */
+  margin: 2px 0 2px 30px; /* Spacing around the anchor tags */
+  padding: 3px 8px; /* Reduce padding for the clickable area */
 }
 
 .mainLink span {
@@ -22,37 +32,37 @@
   font-weight: 700;
 }
 
-  /* Hover effect style for anchor tags */
-  .navLinks a:hover {
-    background-color: var(--opacity-color);
-    width: fit-content;
-    margin: 2px 0 2px 30px; /* Spacing around the anchor tags */
-    padding: 3px 8px; /* Reduce padding for the clickable area */
+/* Hover effect style for anchor tags */
+.navLinks a:hover {
+  background-color: var(--opacity-color);
+  width: fit-content;
+  margin: 2px 0 2px 30px; /* Spacing around the anchor tags */
+  padding: 3px 8px; /* Reduce padding for the clickable area */
 }
 
-  /* Style for the active link */
+/* Style for the active link */
 .activeLink {
-    background-color: var(--opacity-color);
-    width: fit-content;
-    padding: 3px 8px; /* Reduce padding for the clickable area */
-    margin: 2px 0 2px 30px; /* Spacing around the anchor tags */
+  background-color: var(--opacity-color);
+  width: fit-content;
+  padding: 3px 8px; /* Reduce padding for the clickable area */
+  margin: 2px 0 2px 30px; /* Spacing around the anchor tags */
 }
 
-  /* Style for the "LIFESPAN" item */
+/* Style for the "LIFESPAN" item */
 .lifespanItem a {
-    text-decoration: none;
-    color: var(--light-color);
+  text-decoration: none;
+  color: var(--light-color);
 }
 
-  /* Separator style */
+/* Separator style */
 .separator {
-    border: none;
-    height: 1px;
-    background-color: var(--light-color); /* Separator color */
+  border: none;
+  height: 1px;
+  background-color: var(--light-color); /* Separator color */
 }
 
-  /* Hover effect style for "LIFESPAN" item */
+/* Hover effect style for "LIFESPAN" item */
 .lifespanItem:hover a {
-    /* Adds a text shadow effect for a hover effect */
-    text-shadow: 0 0 5px rgba(255, 255, 255, 0.7); /* Brilliance on the letters */
+  /* Adds a text shadow effect for a hover effect */
+  text-shadow: 0 0 5px rgba(255, 255, 255, 0.7); /* Brilliance on the letters */
 }
