--- a/src/components/layout/main/MainRouting.module.css
+++ b/src/components/layout/main/MainRouting.module.css
@@ -1,5 +1,5 @@
 .routesContainer {
-    background-color: var(--light-color);
+    background-color: rgb(255, 255, 255);
     min-height: 100vmin;
     margin-top: -20px !important;
 }
