--- a/src/components/layout/sidebar/Sidebar.module.css
+++ b/src/components/layout/sidebar/Sidebar.module.css
@@ -1,17 +1,26 @@
 .sidebarContainer {
-  box-shadow: 3px 0 5px -2px rgba(0, 0, 0, 0.3); /* Ombra a la dreta */
   height: 100vh; /* Assegura que ocupa tota l'altura */
   position: fixed;
   top: 0;
   left: 0;
   z-index: 10;
+  box-shadow: 3px 0 5px -2px rgba(0, 0, 0, 0.3); /* Ombra a la dreta */
+  transition: transform 0.5s ease, width 0.5s ease; /* Transició per a l'animació suau */
+  transform: translateX(0); /* Inicialment visible */
+  width: 16.6667%; /* Correspond a col-2 */
 }
+
+.sidebarContainer.collapsed {
+  transform: translateX(-100%); /* Desplaça cap a l'esquerra quan col·lapsat */
+  width: 0; /* Amplada 0 quan col·lapsat */
+}
+
+
 
 .navContainer {
   background-color: rgb(255, 255, 255);
   height: 87vmin;
   overflow-y: auto;
-  /* altres estils */  box-shadow: 3px 0 5px -2px rgba(0, 0, 0, 0.3); /* Ombra a la dreta */
 
 }
 
@@ -23,8 +32,8 @@
   text-decoration: none;
   transition: background-color 0.4s ease, color 0.4s ease; /* Smooth transition */
   border-radius: 5px; /* Adds some rounding to simulate buttons */
-  margin: 2px 0 2px 30px; /* Spacing around the anchor tags */
-  padding: 3px 8px; /* Reduce padding for the clickable area */
+  margin: 1px 0 1px 50px; /* Spacing around the anchor tags */
+  padding: 2.5px 8px; /* Reduce padding for the clickable area */
 }
 
 .mainLink span {
@@ -36,8 +45,6 @@
 .navLinks a:hover {
   background-color: var(--opacity-color);
   width: fit-content;
-  margin: 2px 0 2px 30px; /* Spacing around the anchor tags */
-  padding: 3px 8px; /* Reduce padding for the clickable area */
 }
 
 /* Style for the active link */
